Multiple fixes and improvements: - Fix subscription button on Firefox - Add macOS Ruby installation guide - Revise post structure - Adjust welcome message display - Remove text shadows from styles - Adjust guide page image sizes - Fix list order numbers and add new post section

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -261,8 +261,8 @@
   background: linear-gradient(to bottom right, #ec4899, #fb923c) !important;
   display: flex;
   font-family: Optima, sans-serif !important;
-  border: 1px solid transparent !important;
-  border-radius: 10px !important; /* Added rounded corners */
+  border: 2px solid transparent !important;
+  border-radius: 10px !important;
 }
 
 #mc_embed_signup #mc-embedded-subscribe.button:hover {
